--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@100;300;600;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Frontend Mentor | Rock, Paper, Scissors</title>
+  <link rel="icon" href="images/favicon.ico">
+  <title>Rock, Paper, Scissors</title>
   <!-- Score
   Rules
 
@@ -79,10 +82,29 @@
     </div>
   </div>
 
+<!-- help -->
+
+<div class="help">
+  <a href="#IrVentanaFlotante"> <img src="images/help.svg" id="svg-icon-help" alt="help icon"></a>
+</div>
+<div id="IrVentanaFlotante" class="modal">
+  <div class="ventana">
+    <a href="#" id='cross'>
+    <img src="images/cross.svg" alt="">
+    </a>
+    <div class="contenido-ayuda">
+      <h2>¿Como funciona?</h2>
+            <p>Para saberlo visita la documentacion en <a href="https://github.com/Juandi-DT/rock-paper-scissors-.github.io/blob/main/README.md">documentacion</a> </p>
+    </div>
+  </div>  
+</div>
+
+<!-- end help -->
+
 <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by &copy;<a href="https://github.com/Juandi-DT">Juandi_DT</a>.
-  </footer>
+</footer>
 
   
   <script src="js/class.js"></script>
