--- a/index.html
+++ b/index.html
@@ -35,34 +35,27 @@
         </div>
         <div class="score-content">
           <span class="score-text">SCORE</span>
-          <span class="score-number"></span>
+          <span class="score-number">0</span>
         </div>
       </div>
 
       <div class="options">
         <div class="options-content">
-          <div class="option i1"><img class="bItem" src="images/paperIMG.svg" alt=""></div>
-          <div class="option i2"><img class="bItem" src="images/scissorsIMG.svg" alt=""></div>
-          <div class="option i3"><img class="bItem" src="images/rockIMG.svg" alt=""></div>
+          <div class="option i1"><img class="bItem" src="images/paperIMG.svg" alt="papper icon and button"></div>
+          <div class="option i2"><img class="bItem" src="images/scissorsIMG.svg" alt="scissors icon and button"></div>
+          <div class="option i3"><img class="bItem" src="images/rockIMG.svg" alt="rock icon and button"></div>
         </div>
         <div class="options-content-lucha">
-          <div class="option i1 trns-1 img1"><h2>THE HOUSE PICKED</h2><img class="bItem" src="images/paperIMG.svg" alt=""></div>
+          <div class="option i1 trns-1 img1"><h2>THE HOUSE PICKED</h2><img class="bItem" src="images/paperIMG.svg" alt="papper icon and button"></div>
   
           <div class="Resultado">
             <span class="Resultado-title">
-              <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;" class="mos-resultado-title">
-                </font>
-              </font>
+                <span class="mos-resultado-title"></span>
             </span>
-            <button class="Resultado-button" type="button">
-              <font style="vertical-align: inherit;">
-                <font style="vertical-align: inherit;">JUEGA DE NUEVO</font>
-              </font>
-            </button>
+            <button class="Resultado-button" type="button">JUEGA DE NUEVO</button>
           </div>
   
-          <div class="option i2 trns-2 img2"><h2>YOU PICKED</h2><img class="bItem" src="images/paperIMG.svg" alt=""></div>
+          <div class="option i2 trns-2 img2"><h2>YOU PICKED</h2><img class="bItem" src="images/paperIMG.svg" alt="papper icon and button"></div>
         </div>
       </div>
       
@@ -90,7 +83,7 @@
 <div id="IrVentanaFlotante" class="modal">
   <div class="ventana">
     <a href="#" id='cross'>
-    <img src="images/cross.svg" alt="">
+    <img src="images/cross.svg" alt="cross icon and button exit">
     </a>
     <div class="contenido-ayuda">
       <h2>¿Como funciona?</h2>
